Sat,  9 Dec 2006 02:56:52 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Massive cleanup, this might introduce 
          new bugs from refactoring; please report if you find any
        * src/gpodder/liblocaldb.py: Fix get_filename_by_podcast() function 
          to check for errors in return value of get_channel()
        * bin/gpodder: pushed version + release date
        * data/gpodder.glade: Removed the downloaded episodes tab and 
          added a "Play" button to the gPodderEpisode window (if the episode
          has already been downloaded

Sat,  9 Dec 2006 01:38:35 +0100 <thp@perli.net>
        * src/gpodder/liblocdbreader.py: Read mimetype + calc filesize
        * src/gpodder/liblocdbwriter.py: Write out mimetype
        * src/gpodder/libpodcasts.py: re-design getItemsModel to new 
          function items_liststore(), added get_all_episodes() function 
          to retrieve episodes both in the feed and in the localdb; removed 
          getActiveByUrl() and replaced with find_episode(); added new 
          function calculate_filesize() to podcastItem
        * src/gpodder/gpodder.py: Removed some orphaned comment lines; 
          adopt GUI code for changes in libpodcasts (see above)
        * src/gpodder/liblocaldb.py: Adopt for changes in libpodcasts
        * data/gpodder.glade: Added first try on "Episodes" menuitem

Fri,  8 Dec 2006 21:50:39 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Add DownloadHistory class that saves 
          a list of already downloaded URLs; Make the podcastChannel class 
          utilize DownloadHistory through gPodderLib (background color for 
          already downloaded but already deleted episode is light green, 
          mark as downloaded when adding to localdb, utilize the history 
          in newest_pubdate_downloaded(), but keep the old method as a 
          fallback)
        * src/gpodder/libgpodder.py: Make a single DownloadHistory object 