@@ -1,3 +1,7 @@
+Sat,  9 Dec 2006 03:04:06 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Fixed a bug that prevented opening the 
+          gPodder preferences window
+
 Sat,  9 Dec 2006 02:56:52 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Massive cleanup, this might introduce 
           new bugs from refactoring; please report if you find any
